# lesbin

./: LICENSE  README.md  compose.yml
.forgejo/workflows/: api-tests.yml  frontend-tests.yml
.github/workflows/: frontend-api.yml  frontend-tests.yml
api/: .env.example  Cargo.toml  Dockerfile  README.md
api/.sqlx/: query-0bd3c6d3db2a4a2b461e0c778a554ffc75237a53679c3cbbb5333de0d8421f51.json  query-120fe9d2a41837e6648a1f67d05a6144905bded72ede00b87d91aee2c282b5d6.json  query-127b3aed7e2414ec9de94b99a7de48b3fae9a076f6d5bb5deeca016302ba10f7.json  query-349634e270289e63ecab95e85b545fa994881c48e4bac1e2b4d3e59d6a73f3ec.json  query-5503219979d71ce58171c5f2f633dcea2395e8ab37a16473236494aecb2f812a.json  query-7301c47701048a2df859a9ca1b69212bf39beda14a3a6dd3295828b97b2881b7.json  query-76e6df4ddc68dbfca9fd6d811b30e760ad2c53e1ae9bf5e10ed2f7cee5a70576.json  query-9d648c180575feed4fe540741deaa270988a1732a128e7bdfeb8be9c185d3aec.json  query-a03ec26051fe4fc58d342b7afd8341c36eb52b04cc5c26525210f3968f1e48dd.json  query-a85498fcf8ff7ed9af5e72ef858ac9b254665167f2cd0a31d0512e5c6d0124bf.json  query-acd63598d889b824a87bf84aaf758a3d66d52fa175f37145c84e73bf5836d919.json  query-ade0a7a703cf7e1f2b6df45b427cc9b2411a7bb2996ba8e37e24b7ea7b640003.json  query-b77e7c227b0ab274428daa753351b529abf505607b20096d9ec9149cf78e386d.json  query-b882d360e7225fe63921d0fea6446cba361f1406e275d81fb6a3a87efb7e61a9.json  query-baddcae6e2d559dbb5ab42fa72b0385693fd4d927ab221575bbac3bf822e5993.json  query-c4bb0a64365a62ea24422b19eab168d1ec93cc71b0311cfd36ce6e08e015d1d9.json  query-caeb57ee3ee2c33602764a53c027d15e4a07ac0e304f2b2b61e4cd5263ec50bd.json  query-cf1b52d53882c3880eb6e32dd6a8c09b1e1a991ecf71347d668322d52017892b.json  query-e3b33823d9beed045650601eeb263ea87a6304585f46977344933b840708676d.json  query-e695cee584aa1ed901fa17217525c9854277ed13f68a4d6c7ce2e861f9ba0f88.json  query-eac951c59b4d0f627c49c3f2b72845a867a7b56a08a979a82e6d09e3fda7fa6c.json  query-f836fff024cea5bc5c1ea4d530e0d94952ec24676e954d1ef45814fc4ff91f8b.json  query-ff9c56abda9b8c20ebd5effaee09f2b3fb8e135d60d7d999c4d4ba595aa88676.json
api/migrations/: 20250519161041_init.sql
api/src/: cryptography.rs  database.rs  main.rs
api/src/middleware/: admin_access_auth.rs  api_access_auth.rs  mod.rs
api/src/routes/: mod.rs  statistics.rs
api/src/routes/admin/: mod.rs
api/src/routes/admin/authenticate/: get.rs
api/src/routes/admin/pastes/id/: delete.rs
api/src/routes/admin/reports/: get.rs  mod.rs
api/src/routes/admin/reports/id/: delete.rs  get.rs  mod.rs
api/src/routes/config/: get.rs
api/src/routes/instance/config/: get.rs
api/src/routes/paste/: mod.rs  post.rs
api/src/routes/paste/id/: delete.rs  mod.rs
api/src/routes/pastes/: create.rs  mod.rs
api/src/routes/pastes/id/: delete.rs  get.rs  mod.rs
api/src/routes/pastes/id/report/: create.rs
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/: api.server.ts  constants.ts  cryptography.ts  highlighter.ts
frontend/src/lib/components/: Dialog.svelte  LoadingSpinner.svelte  Toast.svelte
frontend/src/lib/components/button/: Button.svelte  (+1 more)
frontend/src/lib/functions/: paste.remote.ts
frontend/src/lib/server/: api.ts  fetch.ts
frontend/src/lib/state/: toasts.svelte.ts
frontend/src/lib/styles/: reset.css  theme.css
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/admin/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/static/: robots.txt
(+17 files in other folders)
