[package]
name = "lesbin-api"
description = "A privacy-first end-to-end encrypted paste service for sharing your dreams, fanfiction, logs and code."
repository = "https://codeberg.org/Blooym/lesbin"
authors = ["Blooym"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
anyhow = "1.0.99"
bytesize = "2.0.1"
clap = { version = "4.5.47", features = ["derive", "env"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "normalize-path",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rand = "0.9.2"
sha2 = "0.10.9"
uuid = { version = "1.18.1", features = ["v4"] }
hex = "0.4.3"
chrono = { version = "0.4.42", features = ["serde"] }
clap-duration = "0.1.11"
duration-human = "0.1.10"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
